# hamt

./: .gitignore  CMakeLists.txt  bench.py  compile_commands.json  test.py
bench/: bench.cpp  bench.hh  dictionary.cpp
include/: Dummy.hh  HAMT.hh
src/: Dummy.hh  HAMT.cc
test/: bench.cpp  test.cpp
